# sdna

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  starlog.hpi
.claude-plugin/: marketplace.json  plugin.json
.github/scripts/: generate_unit_readme.py
.github/workflows/: readme-refresh.yml
context/journal/: 2026-06.md
docs/vision/: _claude_code_sdk.md  _context_engineering.md  _summarizer.md  _teams.md  _unification.md
examples/: slinky_demo.py  story_graph.cb.json  story_graph.cleaned.cypher  story_graph.enriched.cb.json
mcps/: summarizer_mcp.py
sdna/: CONTEXT_ENGINEERING_DESIGN.md  CONTEXT_ENGINEERING_PLAN.md  __init__.py  ariadne.py  brain.py  chain_ontology.py  chain_tool.py  claude_code_commands.py  code_agent.py  config.py  context_engineering.py  cron.py  crystal_ball.py  crystal_ball_flow.py  crystal_ball_suggest_cli.py  defaults.py  duo.py  duo_chain.py  duo_v2.py  heaven_runner.py  orchestrated_duo_chain.py  poimandres.py  runner.py  sdna.py  selfbot.py  slinky_context.py  slinky_full.py  slinky_manager.py  slinky_v2.py  state.py  tags.py  tools.py
skills/understand-sdna/: SKILL.md  metadata.json
skills/understand-sdna/resources/: cognet_v2.md  poimandres_spine.md
tests/: test_cb_llm_suggest_wave1.py  test_duo_chain.py  test_integration_flowchain.py  test_integration_task_system_tool.py  test_orchestrated_duo_chain.py  test_sdna.py  test_sdna_flowchain.py
