[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanctuary-dna"
version = "0.3.5"
description = "Sanctuary DNA - Gnostic agent workflow DSL. Ariadne (threading) + Poimandres (generation) = SDNA spiral"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Isaac Wostrel-Rubin", email = "isaac@sancovp.com"}
]
keywords = ["agent", "workflow", "claude", "anthropic", "sdk", "composition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.10.6,<3",
    "anthropic==0.97.0",
    "langgraph==0.2.60",
    # chain_ontology.py imports `uco` — the DISTRIBUTION is universal-chain-ontology
    # (github sancovp/universal-chain-ontology). NEVER `pip install uco`: that PyPI
    # name is squatted by an unrelated placeholder. This was an UNDECLARED import
    # (found 2026-07-10 when the promptworld image crashed on it).
    "universal-chain-ontology>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/sancovp/sdna"
Repository = "https://github.com/sancovp/sdna"

[tool.hatch.build.targets.wheel]
packages = ["sdna"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
